[package]
name = "hportal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "5"
defer = "0.2"
flume = "0.11"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
prost = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tap = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
totp-rs = { version = "5", features = ["otpauth"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.10"
