[package]
name = "hportal"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6.1.0"
defer = "0.2"
derive_more = { version = "2.0.1", features = ["debug"] }
flume = "0.11"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
prost = "0.13.5"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tap = "1"
tonic = { version = "0.13.1", features = ["tls-aws-lc", "tls-native-roots"] }
totp-rs = { version = "5", features = ["otpauth"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.13.1"
